--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/Noticia-10032024-Dia-combate-sedentarismo-300x168.jpg"
+                        <img src="img/images.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
