--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/_image.webp" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/1_ryTmEENrKiccJ1Nm0dqmsQ.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/riscos-do-sedentarismo.jpg"
