--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img src="img/1_ryTmEENrKiccJ1Nm0dqmsQ.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/riscos-do-sedentarismo.jpg"
+                        <img src="img/sedentarismo-risco-cardiovascular-coronariano-em-reabilitacao-cardiaca-preguica-gordo-assistir-tv.jpg.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
