--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/sedentarismo (1).jpg"
+                        <img src="img/AS-e1638909091761.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
