--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/AS-e1638909091761.jpg" alt="A imagem apresenta um homem sentando tomando refrigerante e assistindo televisão" title="homem toamndo refrigerante"
+                        <img src="img/AS-e1638909091761.jpg" alt="A imagem apresenta um homem sentando tomando refrigerante e assistindo televisão" title="homem vendo televisão e tomando refrigerante
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
