--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             class= img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/sedentarismo.jpg" class="img-fluid rounded-5"
+                        <img src="img/sedentarismo.jpg" alt="a imagem mostra uma pessoa deitada comendo e tomando refrigerante" title="homem comendo e tomando refrigerante deitado" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
