--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/1_ryTmEENrKiccJ1Nm0dqmsQ.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/1_ryTmEENrKiccJ1Nm0dqmsQ.jpg" alt="apresenta homem comendo na tela do computador" title="homem comendo sem sair da frente do computador" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/sedentarismo-risco-cardiovascular-coronariano-em-reabilitacao-cardiaca-preguica-gordo-assistir-tv.jpg.jpg"
