--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img src="img/1_ryTmEENrKiccJ1Nm0dqmsQ.jpg" alt="apresenta homem comendo na tela do computador" title="homem comendo sem sair da frente do computador" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/sedentarismo-risco-cardiovascular-coronariano-em-reabilitacao-cardiaca-preguica-gordo-assistir-tv.jpg.jpg"
+                        <img src="img/sedentarismo-risco-cardiovascular-coronariano-em-reabilitacao-cardiaca-preguica-gordo-assistir-tv.jpg.jpg" alt="apresenta homem em um ciclo que se repete todos os dias" title="homem com preguiça so comendo e dormindo enfrete a televisão e sentado no sofá"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
