--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/sedentarismo.jpg 123" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/sedentarismo.jpg 123" alt="homem sentado no sofá" title="homem so sentado no sofá so engordando e não ligando pra nada" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que é sedentarismo?</h2>
